--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
         && docker-php-ext-configure \
         gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
         && docker-php-ext-install -j$(nproc) \
-        mbstring zip gd xml pdo pdo_pgsql pdo_mysql soap mcrypt intl \
+        mbstring zip gd xml pdo_pgsql pdo_mysql soap mcrypt intl \
         && rm -r /var/lib/apt/lists/*
 RUN a2enmod rewrite
 RUN curl -sS https://getcomposer.org/installer | php -- \
