--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -2,8 +2,9 @@ FROM php:5.6-apache
 
 MAINTAINER Kentaro Ohkouchi <nanasess@fsm.ne.jp>
 
-RUN apt-get update && apt-get install --no-install-recommends -y \
-        git curl wget sudo libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libmcrypt-dev libxml2-dev libpq-dev libpq5 postgresql-client mysql-client ssl-cert libicu-dev \
+RUN mkdir -p /usr/share/man/man1 && mkdir -p /usr/share/man/man7 && \
+        apt-get update && apt-get install --no-install-recommends -y \
+        git curl wget sudo libfreetype6-dev libjpeg62-turbo-dev libmcrypt-dev libmcrypt-dev libxml2-dev libpq-dev libpq5 postgresql-client default-mysql-client ssl-cert libicu-dev \
         && docker-php-ext-configure \
         gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
         && docker-php-ext-install -j$(nproc) \
